vlib/v/parser/tests/postfix_inc.vv
mut v := 4
_ = v
++v
